Fix proposal alignment

--- a/app/assets/stylesheets/decidim/accountability/accountability/_cards.scss
+++ b/app/assets/stylesheets/decidim/accountability/accountability/_cards.scss
@@ -1,5 +1,5 @@
 .accountability {
-  .card--list__text {
+  .card__link--block {
     display: block;
   }
   .card--list__data {
